fixed social link wrapping+home icon is not block

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,7 @@ body {
   font-family: "Quicksand", sans-serif;
   font-weight: 400;
   max-width: 960px;
+  min-width: 300px;
   margin: auto;
   font-size: 1.2em;
   color: var(--mainText);
@@ -209,6 +210,7 @@ svg {
   font-size: 1.5em;
   color: var(--bg);
   border-radius: 5px;
+  display: contents;
 }
 .home-icon svg {
   padding: 0.25em;
@@ -217,6 +219,10 @@ svg {
 .home-icon svg {
   box-shadow: inset 0 0 2px var(--shadow);
   transition: box-shadow 0.1s;
+}
+.social-info {
+  display: flex;
+  flex-wrap: wrap;
 }
 .social-link {
   color: var(--bg);
